src/objects/License_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>License History</relationshipLabel>
        <relationshipName>License_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Begin_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Historical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Historical_Current_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>License Historical Current Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>License_Historical_Field_Name__c</fullName>
        <description>Venture Historical Field Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>License Historical Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Historical_Previous_Value__c</fullName>
        <description>Venture Historical Previous Field Value</description>
        <encryptionScheme>None</encryptionScheme>
        <label>License Historical Previous Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>License_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>License Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>License History</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>